docs: refresh readme for integrated repository state